chore: improve tests